Added Pictures to webView Almost at Version 1 ready to be handed into university

--- a/MyStopMonitor/AboutInfo.html
+++ b/MyStopMonitor/AboutInfo.html
@@ -5,7 +5,7 @@
             <title>About MyStopMonitor</title>
            <style type="text/css">
 body {
-	font: 55%/1.4 Verdana, Arial, Helvetica, sans-serif;
+	font: 75%/1.4 Verdana, Arial, Helvetica, sans-serif;
 	background-color: #42413C;
 	margin: 0;
 	padding: 0;
@@ -121,12 +121,13 @@ header, section, footer, aside, article, figure
             <article class="content">
                     <blockquote>
                         <blockquote>
-                            <blockquote>
-                                <h1>About</h1>
-                            </blockquote>
+                                <h1>&nbsp;&nbsp;&nbsp;About</h1>
                         </blockquote>
                     </blockquote>
-                    <p>MyStopMonitor is an application to help all of us that take public transport in our daily lives, the use of the application is to help remind you that the next stop coming is the one you are going to get off the train at.  Because all of us have had the horrible experience of coming to as the train is pulling out of a station and frantically trying to find a sign post or marking that tells you its not the stop you need to get off at!!  Now this solution will remind you before that important stop arrives, how is this different from the apple reminders application built into IOS 6+ well it is tailored around the PTV or Melbourne train providers records, so the locations of stations are already there for you, any updates or new stops will automatically be added to your list of stops</p>
+                    <p>MyStopMonitor is an application to help all of us that take public transport in our daily lives, the use of the application is to help remind you that the next stop coming is the one you are going to get off the train at.  Because all of us have had the horrible experience of coming to as the train is pulling out of a station and frantically trying to find a sign post or marking that tells you its not the stop you need to get off at!!  Now this solution will remind you before that important stop arrives, how is this different from the apple reminders application built into IOS 6+ well it is tailored around the PTV or Melbourne train providers records, so the locations of stations are already there for you, any updates or new stops will automatically be added to your list of stops. This application is made in a way that you can set your stop's both for work/school and home and close the application and when the your getting close to the station set the phone will alert you and ask if you wish to open the app and stop the alert.</p>
+                    <br />
+                    <h4>Future Updates:</h4>
+                    <p>I am open to all ideas and inquiries at mailto: MyStopMonitor@gmail.com feel free to send in ideas I may not be able to reply to them all but be assured I do read all emails.  I will be looking to update this app as IOS updates occur, one new feature apple is bringing is to allow location sharing among family members and I will use this to allow this app to use this feature.  Imagine your on the way home from school, university or work and would like to be picked up from the train station your planning to get off at by family or a partner, rather then ringing or messaging them a few stops before so they can arrive on time without having to wait around for you this application could send a text message on your behalf when you enter the area that triggers the alert to get ready to leave the train.  This would all happen in the background if you chose the option in the alert settings, you get off the train and your ride home is now waiting or close by to collect you.  Other new features will be available in updates coming so please stay tuned.  I hope you get some use from this application and save time that can be better used with family or friends.</p>
                 <section> </section>
                 <!-- end .content --></article>
             <footer>
