--- a/MyStopMonitor/WelcomeInfo.html
+++ b/MyStopMonitor/WelcomeInfo.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 body
 {
-	font: 55%/1.4 Verdana, Arial, Helvetica, sans-serif;
+	font: 75%/1.4 Verdana, Arial, Helvetica, sans-serif;
 	background-color: #42413C;
 	margin: 0;
 	padding: 0;
@@ -119,39 +119,30 @@ header, section, footer, aside, article, figure
   <header width="188"><img src="logo.png" alt="MyStopMonitor" name="logo" width="308" height="139" id="logo"></header>
   <article class="content">
     <h1>Welcome to MyStopMonitor.</h1>
-    <p>As I know how confusing a new application can be to get used to I thought id lay out some steps to help you all get started.</p>
+    <p>Thanks for downloading my app here is some information to help you get started adding station alerts to the application.</p>
     
-    <p>How to add your first stop alert/reminder:</p>
+    <p>Add your first stop alert/reminder:</p>
     
-    <table width="306" height="377" border="0" id="howToTbl">
+    <table width="297" height="505" border="0" id="howToTbl">
       <tr>
-        <td width="94" height="23"><h3>Steps:</h3></td>
-        <td width="100"><h3>How to:</h3></td>
-        <td width="145"><h3>Pictures:</h3></td>
+        <td width="91" height="83">Tap + to add a stop</td>
+        <td width="196"><p><img name="" src="2_Tap_button.png" width="174" height="297" alt=""></p></td>
       </tr>
       <tr>
-        <td align="center">1</td>
-        <td>Tap + to add a stop</td>
-        <td>&nbsp;</td>
+        <td height="82">Search or select Stop from List.</td>
+        <td><p><img name="" src="3_ChoosStop.png" width="174" height="297" alt=""></p></td>
       </tr>
       <tr>
-        <td align="center">2</td>
-        <td>Search or select Stop from List.</td>
-        <td>&nbsp;</td>
-      </tr>
-      <tr>
-        <td align="center">3</td>
         <td>Tap Stop to view extra information.</td>
-        <td>&nbsp;</td>
+        <td><p><img name="" src="5_tapStopForInfo.png" width="174" height="297" alt=""></p></td>
       </tr>
       <tr>
-        <td align="center">4</td>
         <td>If your not happy with the alert time before stop arrives, change the radius of alerts in the settings tab.</td>
-        <td>&nbsp;</td>
+        <td><p><img name="" src="7_SetRadiusSize.png" width="174" height="401" alt=""></p></td>
       </tr>
     </table>
     <p>&nbsp;</p>
-    <p>&nbsp;</p>
+    <p>More instructions can be found at http://MyStopMonitor.mine.nu/</p>
     <section> </section>
   <!-- end .content --></article>
   <footer>
