Finalise badge on first run only for instruction direction.

--- a/MyStopMonitor/WelcomeInfo.html
+++ b/MyStopMonitor/WelcomeInfo.html
@@ -119,6 +119,7 @@ header, section, footer, aside, article, figure
   <header width="188"><img src="logo.png" alt="MyStopMonitor" name="logo" width="308" height="139" id="logo"></header>
   <article class="content">
     <h1>Welcome to MyStopMonitor.</h1>
+    <h3><u><i>Instructions:</i></u></h3>
     <p>Thanks for downloading my app here is some information to help you get started adding station alerts to the application.</p>
     
     <p>Add your first stop alert/reminder:</p>
